# kpi-hackathon-template

./: .env.example  .gitignore  README.md  pyproject.toml
blue/: base.py  baseline.py  submission.py
examples/finance_short/example_01/: document.txt  ground_truth.json
red/: base.py  baseline.py  submission.py
scripts/: run_match.py
shared/: metering.py  scoring.py  types.py
tests/: test_scoring.py  test_smoke.py
