[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hackathon-template"
version = "0.1.0"
description = "Red vs Blue agent template — Ekimetrics × ESSEC hackathon"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
llm = ["openai>=1.50"]

[tool.hatch.build.targets.wheel]
packages = ["shared", "red", "blue"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
